# Dspy-practice

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
blogs/01-foundations/1.1-setup-and-philosophy/: blog.md
blogs/01-foundations/1.2-signatures/: blog.md
blogs/01-foundations/1.3-first-modules/: blog.md
blogs/01-foundations/1.4-custom-modules/: blog.md
blogs/01-foundations/1.P-mini-project-text-classifier/: blog.md
blogs/02-structured-outputs/2.1-typed-predictors/: blog.md
blogs/02-structured-outputs/2.2-assertions/: blog.md
blogs/02-structured-outputs/2.3-output-refinement/: blog.md
blogs/02-structured-outputs/2.P-mini-project-entity-extractor/: blog.md
blogs/03-evaluation/3.1-building-eval-sets/: blog.md
blogs/03-evaluation/3.2-defining-metrics/: blog.md
blogs/03-evaluation/3.3-running-evaluations/: blog.md
blogs/03-evaluation/3.4-synthetic-datasets/: blog.md
blogs/03-evaluation/3.P-mini-project-eval-harness/: blog.md
blogs/04-optimization/4.1-bootstrap-rs/: blog.md
blogs/04-optimization/4.2-miprov2/: blog.md
blogs/04-optimization/4.3-gepa/: blog.md
blogs/04-optimization/4.4-optimizer-landscape/: blog.md
blogs/04-optimization/4.P-project-self-optimizing-rag/: blog.md
blogs/05-retrieval-rag/5.1-retrieval-in-dspy/: blog.md
blogs/05-retrieval-rag/5.2-building-rag/: blog.md
blogs/05-retrieval-rag/5.3-multi-hop-rag/: blog.md
blogs/05-retrieval-rag/5.4-rag-as-agent/: blog.md
tests/: conftest.py  test_examples.py  test_metrics.py  test_modules.py  test_signatures.py  test_tools.py  test_typed_predictors.py
(+86 files in other folders)
